# armsmith

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRACTS.md  PRD.md  architecture-diagram.html  spike0-result.md
docs/plans/: 2026-06-30-phase-1.md  2026-07-02-phase-2.md
examples/: bench-full.yaml  bench.yaml  eval.txt  model-qwen25-7b.json
scripts/: provision_graviton.sh  spike0_mcp_handshake.py
src/armsmith/: __init__.py  actions.py  agent.py  bench.py  brain.py  cli.py  models.py  profiler.py  report.py  target.py
tests/: test_actions.py  test_agent.py  test_bench.py  test_brain.py  test_cli.py  test_models.py  test_profiler.py  test_report.py  test_target.py
tests/fixtures/: bench-generic.json  bench-native.json  bench-portable.json  hotspots_error.json  hotspots_native.json  hotspots_portable.json  llama_perplexity_kld.txt
trajectories/2026-07-12T21-48-08Z-r8g/: baseline.json  expert.json  manifest.json  recipe.json  report.html  repro.json  trajectory.jsonl
trajectories/2026-07-12T21-48-08Z-r8g/configs/: 27a5e584480b.json  2f505bda8b45.json  2fe684de6fcc.json  3b1a244a4ab1.json  44624e107f5e.json  499c38baf69e.json  50b7cf4c81eb.json  52e0c7e0fc0f.json  5d8b42eb5e80.json  73355f75ca23.json  88e52d7d1e94.json  89b020fb233d.json  8e821f901b0c.json  a4a443113b37.json  b8e23731cd0e.json  d8d6129e8f87.json  e146f050262b.json  f1df6f1045cd.json
trajectories/2026-07-12T21-48-08Z-r8g/snapshots/: 2fe684de6fcc.json  f1df6f1045cd.json
video/: VOICEOVER.md
video/remotion/: package-lock.json  package.json
video/remotion/scripts/: sync-artifacts.mjs
video/remotion/src/: Demo.tsx  Root.tsx  components.tsx  scenes.tsx  style.css  timeline.ts
