[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "armsmith"
version = "0.0.1"
description = "A reproducible Graviton LLM-optimization lab: a deterministic autotuner plus an LLM Arm Performix analyst."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Kit Fun So" }]
keywords = ["arm", "graviton", "llm", "inference", "optimization", "performix", "llama.cpp", "kleidiai"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
dependencies = [
  "typer>=0.12",
  # Heavier deps are added as each module lands (keeps the scaffold install fast):
  #   profiler / executor  -> paramiko   (SSH to the Graviton target)
  #   report               -> jinja2     (self-contained HTML)
  #   brain (analyst)      -> anthropic  (default; client is model-agnostic)
  #   bench stats          -> numpy      (median + 95% CI)
]

[project.urls]
Homepage = "https://github.com/kitfunso/armsmith"

[project.scripts]
armsmith = "armsmith.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
