[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "armsmith"
version = "0.0.1"
description = "A reproducible Graviton LLM-optimization lab: a deterministic autotuner plus an LLM Arm Performix analyst."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Kit Fun So" }]
keywords = ["arm", "graviton", "llm", "inference", "optimization", "performix", "llama.cpp", "kleidiai"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
dependencies = [
  "typer>=0.12",
  "paramiko>=3.4",
  "jinja2>=3.1",
  "anthropic>=0.40",
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "black"]

[project.urls]
Homepage = "https://github.com/kitfunso/armsmith"

[project.scripts]
armsmith = "armsmith.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
